force-app/main/default/objects/EmailMessage/fields/Chekbox_for_reply__c.field-meta.xml
<CustomField>
    <fullName>Chekbox_for_reply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chekbox for reply</label>
    <type>Checkbox</type>
</CustomField>