force-app/main/default/objects/EmailMessage/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <formula>Subject +&apos; &apos;+ FromAddress +&apos; &apos;+ ToAddress +&apos; &apos; + TEXT(MessageDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifier</label>
    <type>Text</type>
</CustomField>