force-app/main/default/objects/EmailMessage/fields/Message_length__c.field-meta.xml
<CustomField>
    <fullName>Message_length__c</fullName>
    <formula>LEN(TEXT( Message_Size__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>