force-app/main/default/objects/EmailMessage/fields/Message_Size__c.field-meta.xml
<CustomField>
    <fullName>Message_Size__c</fullName>
    <formula>MessageSize</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>