force-app/main/default/objects/EmailMessage/fields/NameTesting__c.field-meta.xml
<CustomField>
    <fullName>NameTesting__c</fullName>
    <label>NameTesting</label>
    <length>40</length>
    <type>Text</type>
</CustomField>