force-app/main/default/objects/EmailMessage/fields/No_of_chars_in_emailmessae__c.field-meta.xml
<CustomField>
    <fullName>No_of_chars_in_emailmessae__c</fullName>
    <label>No of chars in emailmessae</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>