force-app/main/default/objects/EmailMessage/fields/TrimmedHtmlBody__c.field-meta.xml
<CustomField>
    <fullName>TrimmedHtmlBody__c</fullName>
    <label>TrimmedHtmlBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>