force-app/main/default/objects/EmailMessage/fields/TrimmedTextBody__c.field-meta.xml
<CustomField>
    <fullName>TrimmedTextBody__c</fullName>
    <label>TrimmedTextBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>