force-app/main/default/objects/EmailMessage/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Subject</columns>
    <columns>HasAttachment</columns>
    <columns>Status</columns>
    <columns>Parent.Name</columns>
    <columns>CREATED_DATE</columns>
    <columns>IsDeleted</columns>
    <columns>FromAddress</columns>
    <columns>FromName</columns>
    <columns>HtmlBody</columns>
    <columns>TextBody</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>